<resources>
    <!-- Project wide strings. -->
    <string name="app_name">Destiny Guns</string>
    <string name="studio_name">Khaos Studios</string>

    <!-- File access strings. -->
    <string name="SHARED_PREFS">edu.uw.connerjm.destinyguns.PREFS</string>
    <string name="LOGGED_IN">loggedin</string>
    <string name="USERNAME">username</string>

    <!-- Normal single-use strings. -->
    <string name="facebook_app_id">144525742575862</string>
    <string name="refine">Choose a custom list to view or\n use the drop boxes to refine your search.</string>
    <string name="logout">Logout</string>
    <string name="register_new_user">Register New User</string>
    <string name="email">Please enter your email*</string>
    <string name="password">Your password*</string>
    <string name="fname">First name*</string>
    <string name="minit">M</string>
    <string name="lname">Last name*</string>
    <string name="register">Register</string>
    <string name="information">App Info</string>
    <string name="register_success">Thank you for registering!</string>
    <string name="register_failure">Unable to register. Please retype your email and password.
        Password must be at least 6 characters in length.</string>
    <string name="login_failure">Unable to login. Retype your email and password or
        choose to register.</string>
    <string name="bug_report">Submit a bug report</string>
    <string name="choose_list">View Selected List</string>
    <string name="refine_weapons">Refine the List</string>
    <string name="not_valid">Not a valid slot and weapon type combination.</string>
    <string name="stats">\t\tStats-</string>
    <string name="details">\t\tDetails-</string>
    <string name="cancel">Cancel</string>
    <string name="rate">Rate</string>
    <string name="voterank">Vote on Rank</string>
    <string name="your_blank_weapons">Your %1$s Weapons</string>
    <string name="blank_weapons">%1$s Weapons</string>
    <string name="blanks">%1$ss</string>
    <string name="blank_blank_weapons">%1$s %2$s Weapons</string>
    <string name="all_weapons">All Weapons</string>
    <string name="blank_blanks">%1$s %2$ss</string>
    <string name="full_name">%1$s (%2$d)</string>
    <string name="exclusive">!%1$s exclusive!</string>
    <string name="charge_rate">Charge Rate: %1$d</string>
    <string name="impact">Impact: %1$d</string>
    <string name="range">Range: %1$d</string>
    <string name="stability">Stability: %1$d</string>
    <string name="reload">Reload: %1$d</string>
    <string name="magazine">Magazine: %1$d</string>
    <string name="rateoffire">Rate of Fire: %1$d</string>
    <string name="blast">Blast Radius: %1$d</string>
    <string name="velocity">Velocity: %1$d</string>
    <string name="speed">Speed: %1$d</string>
    <string name="efficiency">Efficiency: %1$d</string>
    <string name="defense">Defense: %1$d</string>
    <string name="energy">Energy: %1$d</string>

    <!-- PHAT strings. -->
    <string name="info_paragraph1">Destiny Guns was created by Khaos Studios. We are Conner Martin
        and Robert Gillis. It was created as a project for mobile app development and databases
        courses at the University of Washington Tacoma. We, Conner and Robert, do not own the
        rights to any of the intellectual property put forth by Bungie and interpreted by us into
        our application for entertainment and educational purposes.</string>
    <string name="info_paragraph2">As is the nature of this app is statistic based and Bungie will
        continue to support this ever-changing game, There will undoubtedly be misinformation that
        we, the devs, will have not intended. If you find any information that is incorrect, or
        maybe a weapon that you want added, please email the CEO of Khaos Studios at
        connerjm@uw.edu, or follow the steps of filling a bug report below.</string>
    <string name="bug_report_paragraph">To send the devs a bug report, click anywhere along this
        message to be taken to your mail app and email us a detailed description on the bug or
        misinformation that you have found, most importantly including how to recreate the bug.</string>

    <!-- Strings arrays. -->
    <string-array name="console_spinner">
        <item>Xbox One</item>
        <item>Playstation Four</item>
    </string-array>
    <string-array name="list_spinner">
        <item>Select a List</item>
        <item>Favourites</item>
        <item>Owned</item>
        <item>Wishlist</item>
    </string-array>
    <string-array name="rarity_spinner">
        <item>Select a Rarity</item>
        <item>Legendary</item>
        <item>Exotic</item>
    </string-array>
    <string-array name="slot_spinner">
        <item>Select an Equip Slot</item>
        <item>Primary</item>
        <item>Special</item>
        <item>Heavy</item>
    </string-array>
    <string-array name="type_spinner">
        <item>Select a Weapon Type</item>
        <item>Auto Rifle</item>
        <item>Hand Cannon</item>
        <item>Scout Rifle</item>
        <item>Pulse Rifle</item>
        <item>Fusion Rifle</item>
        <item>Sniper Rifle</item>
        <item>Shotgun</item>
        <item>Sidearm</item>
        <item>Machine Gun</item>
        <item>Rocket Launcher</item>
        <item>Sword</item>
    </string-array>

</resources>
